--- a/main.html
+++ b/main.html
@@ -8,6 +8,42 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="container" aria-label="Expanding photo cards">
+
+<div class="panel active" id="panel-1" role="button" tabindex="0"
+aria-pressed="true"
+style="background-image:url('https://images.unsplash.com/photo-1558979158-65a1eaa08691?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80');">
+<p class="img-text">Explore the world</p>
+</div>
+
+
+<!-- Panel 2 -->
+<div class="panel" id="panel-2" role="button" tabindex="0" aria-pressed="false"
+style="background-image:url('https://images.unsplash.com/photo-1572276596237-5db2c3e16c5d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80');">
+<p class="img-text">Wild Forest</p>
+</div>
+
+
+<!-- Panel 3 -->
+<div class="panel" id="panel-3" role="button" tabindex="0" aria-pressed="false"
+style="background-image:url('https://images.unsplash.com/photo-1507525428034-b723cf961d3e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1353&q=80');">
+<p class="img-text">City on Winter</p>
+</div>
+
+
+<!-- Panel 4 -->
+<div class="panel" id="panel-4" role="button" tabindex="0" aria-pressed="false"
+style="background-image:url('https://images.unsplash.com/photo-1551009175-8a68da93d5f9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1351&q=80');">
+<p class="img-text">Mountain Cloud</p>
+</div>
+
+
+<!-- Panel 5 -->
+<div class="panel" id="panel-5" role="button" tabindex="0" aria-pressed="false"
+style="background-image:url('https://images.unsplash.com/photo-1549880338-65ddcdfd017b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80');">
+<p class="img-text">Sunny Beach</p>
+</div>
+</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
